# duckdb-athena-extension

./: .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  duckdb-namedparams.patch  extension_config.cmake
.github/workflows/: Linux.yml  Windows.yml  macOS.yml
duckdb-ext/: build.rs
duckdb-ext/src/: duckdb_ext.cc  function_info.rs  lib.rs  table_function.rs  value.rs
duckdb_athena_rust/: Cargo.toml  README.md  build.rs  cbindgen.toml  duckdb
duckdb_athena_rust/src/: connection.rs  data_chunk.rs  database.rs  duckdb_athena_rust.cc  duckdb_athena_rust.h  function_info.rs  lib.rs  logical_type.rs  table_function.rs  value.rs  vector.rs
scripts/: extension-upload.sh
src/: athena_extension.cpp  error.rs  extension.c  lib.rs  table_function.rs  types.rs  wrapper.c  wrapper.h
src/include/: athena_extension.hpp  rust.h
