[package]
name = "duckdb-athena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb-extension-framework = "0.4.1"
tokio = { version = "1.23.0", features=['rt'] }
aws-config = "0.54.1"
aws-sdk-athena = "0.24.0"
lazy_static = "1.4.0"
anyhow = { version = "1.0.68", features = ["backtrace"] }
futures = "0.3"

[lib]
name = "athenatable"
crate-type = ["staticlib"]