[package]
name = "duckdb_athena_rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "duckdb_athena_rust"
crate-type = ["staticlib", "rlib"]
 
[dependencies]
duckdb = { version = "1.1.1", features = ["bundled"] }
libduckdb-sys = "1.1.1"

[build-dependencies]
bindgen = "0.71.1"
build_script = "0.2.0"
cc = "1.0.78"
